--- a/.github/workflows/run-scripts.yml
+++ b/.github/workflows/run-scripts.yml
@@ -21,12 +21,14 @@ jobs:
       - name: Run Script
         run: |
           node templates/img/update_readme.js
-          
+ 
       - name: Commit and Push Changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-
+      
           git add .
           git commit -m "Automated README update"
-          git push
+          git push origin HEAD:${{ github.ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
