--- a/.github/workflows/run-scripts.yml
+++ b/.github/workflows/run-scripts.yml
@@ -24,7 +24,7 @@ jobs:
           
       - name: Commit and Push Changes
         run: |
-          git config --global user.email 'Antonius Torode'
+          git config --global user.name 'Antonius Torode'
           git config --global user.email 'torodean@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
           git checkout "${GITHUB_REF:11}"
