--- a/.github/workflows/run-scripts.yml
+++ b/.github/workflows/run-scripts.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Run Script
         run: |
-          node templates/img/update_readme.js
+          node scripts/update_readme.js
           
       - name: Commit and Push Changes
         run: |
