--- a/.github/workflows/run-scripts.yml
+++ b/.github/workflows/run-scripts.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main  # Default branch
+    paths:
+    - 'templates/img/**'
+    - 'campaign/characters/**'
 
 jobs:
   run-script:
