--- a/.github/workflows/automated_stockpile_update.yml
+++ b/.github/workflows/automated_stockpile_update.yml
@@ -1,11 +1,12 @@
 name: Automated Stockpile Update
 
-on:
+on:    
   schedule:
-    - cron: '0 5 * * 0' # Runs every Sunday at 5 AM UTC
+    - cron: '30 13 * * 4' # Runs every Sunday at 5 AM UTC
 
 jobs:
   update-stockpile:
+    if: github.ref == 'refs/heads/automated-updates'
     runs-on: ubuntu-latest
 
     steps:
