--- a/.github/workflows/automated_stockpile_update.yml
+++ b/.github/workflows/automated_stockpile_update.yml
@@ -2,7 +2,7 @@ name: Automated Stockpile Update
 
 on:    
   schedule:
-    - cron: '38 14 * * 4' # Runs every Sunday at 5 AM UTC
+    - cron: '52 14 * * 4' # Runs every Sunday at 5 AM UTC
 
 jobs:
   update-stockpile:
@@ -22,7 +22,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy requests
+          pip install numpy requests matplotlib
 
       - name: Run Stockpile Updates
         run: |
