--- a/.github/workflows/automated_stockpile_update.yml
+++ b/.github/workflows/automated_stockpile_update.yml
@@ -2,7 +2,7 @@ name: Automated Stockpile Update
 
 on:    
   schedule:
-    - cron: '40 15 * * 4' # Runs every Sunday at 5 AM UTC
+    - cron: '0 16 * * 4' # Runs every Sunday at 5 AM UTC
 
 jobs:
   update-stockpile:
@@ -29,16 +29,32 @@ jobs:
           git checkout automated-updates
           cd templates/stockpile
           git pull
-          python3 stockpile.py -g stockpile_master_general.txt -t stockpile_master_trade.txt -o stockpile_inventory_lists.input -b stockpile_buy_history.txt -s stockpile_sell_history.txt
+          
+          script_dir=$(pwd)
+          stockpile_dir=${script_dir}/../../campaign/notes/stockpile
 
-      - name: Generate Stockpile Plots
-        run: |
-          python3 stockpile_plot.py -b stockpile_buy_history.txt -s stockpile_sell_history.txt -o ../../campaign/notes/stockpile/plots
+          echo "Updating git repo and files to latest!"
+          cd ${script_dir}/templates/stockpile
+          sleep 1
 
-      - name: Update Stockpile HTML Pages
-        run: |
-          cd ..
-          python3 creator.py -f stockpile_inventory_lists.input
+          echo "Running the stockpile update!"
+          ./stockpile.py -g ${script_dir}/templates/stockpile/stockpile_master_general.txt -t ${script_dir}/templates/stockpile/stockpile_master_trade.txt -o ${script_dir}/templates/stockpile/stockpile_inventory_lists.input -b ${script_dir}/templates/stockpile/stockpile_buy_history.txt -s ${script_dir}/templates/stockpile/stockpile_sell_history.txt
+          sleep 1
+
+          echo "Running the stockpile plot generation!"
+          ./stockpile_plot.py -b ${script_dir}/templates/stockpile/stockpile_buy_history.txt -s ${script_dir}/templates/stockpile/stockpile_sell_history.txt -o ${stockpile_dir}/plots
+          sleep 1
+
+          echo "Updating the stockpile HTML pages!"
+          cd ${script_dir}/templates
+          ./creator.py -f ${script_dir}/templates/stockpile/stockpile_inventory_lists.input
+          sleep 1
+
+          echo "Updating the git repo with the new files!"
+          git add -A
+          git commit -m "Automatic stockpile update."
+          git push origin automated-updates
+          sleep 1
 
       - name: Commit and Push Changes
         run: |
