--- a/.github/workflows/automated_stockpile_updates.yml
+++ b/.github/workflows/automated_stockpile_updates.yml
@@ -30,31 +30,31 @@ jobs:
 
       - name: Run Stockpile Updates
         run: |
-          git checkout automated-updates
-          cd templates/stockpile
-          git pull
-          
           script_dir=$(pwd)
-          stockpile_dir=${script_dir}/../../campaign/notes/stockpile
-          
-          echo "Script dir set: ${script_dir}"
-          echo "Stockpile dir set: ${stockpile_dir}"
-          
+          stockpile_in_dir=${script_dir}/templates/stockpile
+          stockpile_out_dir=${script_dir}/campaign/notes/stockpile
+
+          echo "Script dir: ${script_dir}"
+          echo "Stockpile input dir: ${stockpile_in_dir}"
+          echo "Stockpile output dir: ${stockpile_out_dir}"
+
           echo "Updating git repo and files to latest!"
           cd ${script_dir}/templates/stockpile
+          git checkout automated-updates
+          git pull
           sleep 1
 
           echo "Running the stockpile update!"
-          ./stockpile.py -g ${script_dir}/templates/stockpile/stockpile_master_general.txt -t ${script_dir}/templates/stockpile/stockpile_master_trade.txt -o ${script_dir}/templates/stockpile/stockpile_inventory_lists.input -b ${script_dir}/templates/stockpile/stockpile_buy_history.txt -s ${script_dir}/templates/stockpile/stockpile_sell_history.txt
+          ./stockpile.py -g ${stockpile_in_dir}/stockpile_master_general.txt -t ${stockpile_in_dir}/stockpile_master_trade.txt -o ${stockpile_in_dir}/stockpile_inventory_lists.input -b ${stockpile_in_dir}/stockpile_buy_history.txt -s ${stockpile_in_dir}/stockpile_sell_history.txt
           sleep 1
 
           echo "Running the stockpile plot generation!"
-          ./stockpile_plot.py -b ${script_dir}/templates/stockpile/stockpile_buy_history.txt -s ${script_dir}/templates/stockpile/stockpile_sell_history.txt -o ${stockpile_dir}/plots
+          ./stockpile_plot.py -b ${stockpile_in_dir}/stockpile_buy_history.txt -s ${stockpile_in_dir}/stockpile_sell_history.txt -o ${stockpile_out_dir}/plots
           sleep 1
 
           echo "Updating the stockpile HTML pages!"
           cd ${script_dir}/templates
-          ./creator.py -f ${script_dir}/templates/stockpile/stockpile_inventory_lists.input
+          ./creator.py -f ${stockpile_in_dir}/stockpile_inventory_lists.input
           sleep 1
 
           echo "Updating the git repo with the new files!"
