--- a/.github/workflows/automated_stockpile_updates.yml
+++ b/.github/workflows/automated_stockpile_updates.yml
@@ -23,13 +23,12 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip3 install numpy requests matplotlib prettytable
-
       - name: Run Stockpile Updates
-        run: |
+        run: |        
+          echo "Installing Dependencies!"
+          python -m pip3 install --upgrade pip3
+          pip3 install numpy requests matplotlib prettytable
+        
           script_dir=$(pwd)
           stockpile_in_dir=${script_dir}/templates/stockpile
           stockpile_out_dir=${script_dir}/campaign/notes/stockpile
