--- a/.github/workflows/automated_stockpile_updates.yml
+++ b/.github/workflows/automated_stockpile_updates.yml
@@ -61,6 +61,8 @@ jobs:
           echo "Updating the stockpile HTML pages!"
           cd ${script_dir}/templates
           python3 creator.py -f ${stockpile_in_dir}/stockpile_inventory_lists.input
+          cd ${script_dir}
+          python3 mmorpdnd.py -u # Run this a second time in case it failed in the creator (bug in workflows)
           sleep 1
 
       - name: Commit and Push Changes
